<resources>
    <string name="app_name">SQLiteAndmebaas</string>
    <string name="tekst">Lisa tooteid andmebaasi</string>
    <string name="toote_string">Nimi</string>
    <string name="kogus_string">Kogus</string>
    <string name="hind_string">Hind</string>
    <string name="lisa">lisa</string>
    <string name="uuenda_string">Uuenda</string>
    <string name="kustuta_string">kustuta</string>
    <string name="väli">*kohustuslik väli</string>
</resources>
