<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.helennagel.sqliteandmebaas.MainActivity">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/textview"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_margin="5dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center"
            android:text="@string/tekst"/>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/textview2"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/toote_string"
                android:textColor="@color/colorBlack"/>
            <EditText
                android:id="@+id/tooteNimi"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:ems="10"
                android:text=""
                android:hint="@string/väli"
                android:textColorHint="@color/colorAccent"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/textview3"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/kogus_string"
                android:textColor="@color/colorBlack"/>
            <EditText
                android:id="@+id/tooteKogus"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:ems="10"
                android:text=""
                android:hint="@string/väli"
                android:textColorHint="@color/colorAccent"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/textview4"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/hind_string"
                android:textColor="@color/colorBlack"/>
            <EditText
                android:id="@+id/tooteHind"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:ems="10"
                android:text=""
                android:hint="@string/väli"
                android:textColorHint="@color/colorAccent"/>
            <TextView
                android:id="@+id/textview5"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_margin="5dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="€"
                android:textColor="@color/colorBlack"/>
        </TableRow>
    </TableLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_lisa"
            android:layout_weight="1"
            android:text="@string/lisa"
            android:background="@color/colorButton"/>
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/nimekiri">
    </ListView>
</LinearLayout>









